# placebo

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  PLAN.md  README.md  TODO.txt  docker-compose.yml  project_spec.md
analytics_bot/: Dockerfile  pyproject.toml
analytics_bot/src/placebo_analytics/: charts.py  config.py  db.py  main.py  scheduler.py  telegram_handler.py
analytics_bot/src/placebo_analytics/agent/: deep.py  graph.py  nodes.py  prompts.py  state.py  tools.py
api/: Dockerfile  pyproject.toml
api/src/placebo_api/: config.py  db.py  main.py
api/src/placebo_api/routes/: backups.py  checkins.py  exercises.py  experiments.py  metrics.py
backup/: Dockerfile  pyproject.toml
backup/src/placebo_backup/: config.py  main.py  operations.py  scheduler.py  storage.py
bot/: Dockerfile  pyproject.toml
bot/src/placebo_bot/: config.py  db.py  main.py  models.py  scheduler.py  telegram_handler.py  test_moonshot.py  test_scheduler.py  test_telegram_handler.py
bot/src/placebo_bot/agent/: graph.py  nodes.py  prompts.py  state.py
dashboard/: Dockerfile  index.html  nginx.conf  package.json  tsconfig.tsbuildinfo
dashboard/src/: App.tsx  index.css
dashboard/src/api/: client.ts
dashboard/src/components/: CalendarHeatmap.tsx  ComparisonView.tsx  CorrelationPlot.tsx  DateRangeFilter.tsx  Layout.tsx  MetricChart.tsx
dashboard/src/hooks/: useBackups.ts  useCheckins.ts  useExercises.ts  useExperiments.ts  useMetrics.ts
dashboard/src/lib/: exerciseGroups.ts
dashboard/src/pages/: Backups.tsx  Dashboard.tsx  (+4 more)
db/: MIGRATIONS.md  init.sql  seed_dummy_data.sql
db/migrations/: 000001_initial_schema.down.sql  000001_initial_schema.up.sql  000002_gym.down.sql  000002_gym.up.sql
docs/: analytics-bot-improvements.md  analytics-bot-plan.md
gym_bot/: Dockerfile  pyproject.toml
scripts/: backup.sh  restore.sh
(+10 files in other folders)
